Make user action.

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -26,9 +26,9 @@
                      :alt => photo.caption,
                      :title => photo.caption),
             max.url %>
-      </div>      
+      </div>
       <div class="full_name author">
-        <%= link_to photo.user.full_name, "/user/#{photo.user.id}" %>
+        <%= link_to photo.user.full_name, :action => :user, :id => photo.user.id %>
       </div>
       <div class="caption entry-title">
         <%= photo.caption %>
