--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,14 +1,18 @@
-* { margin: 0; padding: 0; color:#333333; line-height:1.5; font-family:Arial, Helvetica, sans-serif; }
-body { margin: 20px 40px; font-size: 90%; }
-a { color: #408888; }
+* { margin: 0; padding: 0; color: #333333; line-height: 1.5; font-family: Arial, Helvetica, sans-serif; }
+body { background: #efead6; margin: 20px 40px; font-size: 90%; }
+a { color: #996633; }
 img { border: none; }
-#content { margin-top: 20px; width: 800px; position: relative; }
+h1 { width: 280px; float: left; }
+h1 a { text-decoration: none; color: #333333; }
+h2 { padding: 7px 0 0 30px; }
+#content { margin-top: 20px; width: 800px; position: relative; clear: both; }
 .post { width: 160px; float: left; }
 .full { display: none; }
-#full .full { display: block; width: 310px; position: absolute; top: 0; left: 100%; }
+#full .full { display: block; width: 350px; height: 90%; position: fixed; top: 5%; left: 860px; overflow: scroll; }
 .caption { margin-top: 10px; }
 .token_at { color: #aaaaaa; }
 .comments { margin-top: 10px; }
 .comment { margin-top: 5px; }
-.comment .full_name { color: #408888; }
+.comment .full_name { color: #996633; }
 .comment .created_at { color: #aaaaaa; }
+#footer { padding: 20px 0 0; clear: both; }
