--- a/app/views/index/_photos.html.erb
+++ b/app/views/index/_photos.html.erb
@@ -1,5 +1,5 @@
 <% @photos.each do |photo| %>
-<div class="post hentry">
+<div class="post hentry <%= photo.id %>">
   <% min = photo.images.first %>
   <% mid = photo.images.at 1 %>
   <% max = photo.images.last %>
@@ -11,18 +11,19 @@
                    :alt => photo.caption,
                    :title => photo.caption),
                   max.url,
-                  :rel => 'bookmark' %>
+                  :rel => 'bookmark',
+                  :onclick => "showFullPost(#{photo.id}); return false;" %>
     </div>
   </div>
   <div class="full entry-content">
     <div class="photo">
-      <%= link_to (image_tag '',
-                   :rel => mid.url,
+      <%= link_to (image_tag mid.url,
                    :width => mid.width,
                    :heigth => mid.height,
                    :alt => photo.caption,
                    :title => photo.caption),
-                  max.url %>
+                  max.url,
+                  :onclick => "open(this.href); return false;" %>
     </div>
     <div class="full_name author">
       <%= link_to photo.user.full_name, "/user/#{photo.user.id}" %>
