--- a/app/views/index/user.html.erb
+++ b/app/views/index/user.html.erb
@@ -1,11 +1,12 @@
-<h1>だらみいんすたぐらむ</h1>
-<h2>ゆーざー</h2>
+<div id="header">
+  <h1><%= link_to 'Instagram Viewer', '/' %></h1>
+  <h2>Photos by <%= @photo.user.full_name %></h2>
+</div>
 <div id="content" class="hfeed">
 <%= render :partial => 'photos', :object => @photos %>
 <p id="nav">
-  <% photo = @photos.last %>
   <%= link_to "Next Photos",
-              "/user/#{photo.user.id}/max_id/#{photo.id}",
+              "/user/#{@photo.user.id}/max_id/#{@photo.id}",
               :rel => 'next' %>
 </p>
 </div>
