--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Instagram Viewer</title>
+<title>Instagram Viewer - <%= yield :title %></title>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-18367987-4']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -18,7 +17,13 @@
 <%= stylesheet_link_tag :all %>
 </head>
 <body>
-<%= yield %>
+<div id="header">
+  <h1><%= link_to 'Instagram Viewer', '/' %></h1>
+  <h2><%= yield :title %></h2>
+</div>
+<div id="content" class="hfeed">
+  <%= yield %>
+</div>
 <div id="footer">
   &copy;2010 <%= link_to 'Instagram', 'http://instagr.am/' %> |
   @<%= link_to 'mitukiii', 'http://twitter.com/mitukiii' %> at <%= link_to 'mitukiii.jp', 'http://mitukiii.jp' %>
