--- a/app/views/index/user.html.erb
+++ b/app/views/index/user.html.erb
@@ -1,7 +1,9 @@
 <%= content_for :title, "Photos by #{@photo.user.full_name}" %>
 <%= render :partial => 'photos', :object => @photos %>
+<% if @photos.length >= 20 %>
 <p id="nav">
   <%= link_to "Next Photos",
               "/user/#{@photo.user.id}/max_id/#{@photo.id}",
               :rel => 'next' %>
 </p>
+<% end %>
