--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,2 +1,2 @@
-<%= content_for :title, "Popular" %>
+<%= content_for :title, "Popular Photos" %>
 <%= render :partial => 'photos', :object => @photos %>
