Add atom link tag.

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,2 +1,2 @@
-<%= content_for :title, "Popular Photos" %>
+<% content_for :atom_url, "/popular.atom" %>
 <%= render :partial => 'photos', :object => @photos %>
