Add link to my photos at footer.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,10 @@
 </div>
 <div id="footer">
   &copy;2010 <%= link_to 'Instagram', 'http://instagr.am/' %> |
-  @<%= link_to 'mitukiii', 'http://twitter.com/mitukiii' %> at <%= link_to 'mitukiii.jp', 'http://mitukiii.jp' %>
+  @<%= link_to 'mitukiii', 'http://twitter.com/mitukiii' %> 
+  (<%= link_to 'Photos', '/user/982876' %>) 
+  at 
+  <%= link_to 'mitukiii.jp', 'http://mitukiii.jp' %>
 </div>
 </body>
 </html>
