--- a/app/views/index/_photos.html.erb
+++ b/app/views/index/_photos.html.erb
@@ -5,14 +5,16 @@
     <div class="photo">
       <%= link_to (photo_image_tag min, photo),
                   max.url,
-                  :rel => 'bookmark',
-                  :onclick => "showFullPost(#{photo.id}); return false;" %>
+                  :rel => 'bookmark external nofollow',
+                  :target => '_blank',
+                  :onclick => "return showFullPost(#{photo.id});" %>
     </div>
   </div>
   <div class="full entry-content">
     <div class="photo">
       <%= link_to (photo_image_tag mid, photo),
                   max.url,
+                  :target => '_blank',
                   :rel => 'external nofollow' %>
     </div>
     <div class="username author">
