--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,2 +1,8 @@
 <% content_for :atom_url, "/popular.atom" %>
+<div id="header">
+  <h1><%= link_to 'Instagram Viewer', '/' %></h1>
+  <h2><%= @title %></h2>
+</div>
+<div id="content" class="hfeed">
 <%= render :partial => 'photos', :object => @photos %>
+</div>
