--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,10 +1,11 @@
-* { margin: 0; padding: 0; color: #333333; line-height: 1.5; font-family: Arial, Helvetica, sans-serif; }
+* { margin: 0; padding: 0; color: #333333; line-height: 1.5; font-family: Helvetica, Arial, sans-serif; }
 body { background: #efead6; margin: 20px 40px; font-size: 90%; }
 a { color: #996633; }
 img { border: none; }
 h1 { width: 260px; float: left; }
 h1 a { text-decoration: none; color: #333333; }
 h2 { padding: 8px 0 0 30px; }
+#user_info { clear: both; }
 #content { margin-top: 20px; width: 800px; position: relative; clear: both; }
 .post { width: 160px; float: left; }
 .full { display: none; }
