Add prototype.js and refactring javascript, stylesheets and html.

--- a/app/views/index/_photos.html.erb
+++ b/app/views/index/_photos.html.erb
@@ -6,8 +6,7 @@
       <%= link_to (photo_image_tag min, photo),
                   max.url,
                   :rel => 'bookmark external nofollow',
-                  :target => '_blank',
-                  :onclick => "return showFullPost(#{photo.id});" %>
+                  :target => '_blank' %>
     </div>
   </div>
   <div class="full entry-content">
