--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -5,8 +5,8 @@ img { border: none; }
 h1 { width: 260px; float: left; }
 h1 a { text-decoration: none; color: #333333; }
 h2 { padding: 8px 0 0 30px; }
-#search { clear: both }
-#search p { display: inline; }
+#find { clear: both }
+#find p { display: inline; }
 #user_info { clear: both; }
 #content { margin-top: 20px; width: 800px; position: relative; clear: both; }
 .post { width: 160px; float: left; }
