--- a/app/views/index/popular.html.erb
+++ b/app/views/index/popular.html.erb
@@ -12,6 +12,6 @@
     <% end %>
   </div>
 </div>
-<div id="content" class="hfeed">
+<div id="content" class="photos hfeed">
 <%= render :partial => 'photos', :object => @photos %>
 </div>
